Feature: new Sidebar component.

--- a/src/views/Editor/Editor.scss
+++ b/src/views/Editor/Editor.scss
@@ -60,7 +60,7 @@
 .Sidebar {
   display: flex;
   flex: 0 0 272px;
-  margin: 0 24px 24px 64px;
+  margin: 0 24px 0 64px;
   max-width: 272px;
   position: relative;
   width: 100%;
