--- a/src/views/Editor/components/Container.scss
+++ b/src/views/Editor/components/Container.scss
@@ -1,10 +1,10 @@
 .Root {
-  margin: -12px;
+  margin: 0 -24px;
   max-height: calc(100% - 64px);
   min-height: 600px;
   overflow-x: visible;
   overflow-y: scroll;
-  padding: 12px 12px 60px;
+  padding: 0 24px;
 
   &:hover {
     &::-webkit-scrollbar-thumb {
@@ -19,6 +19,6 @@
 
   &::-webkit-scrollbar-thumb {
     background: transparent;
-    border-radius: 4px;
+    border-radius: 4px 0 0 4px;
   }
 }
