--- a/src/views/Background/Background.scss
+++ b/src/views/Background/Background.scss
@@ -5,3 +5,37 @@
   max-width: 100%;
   width: 100%;
 }
+
+.Icon {
+  background: #d6d6d7;
+  height: 100%;
+  mask: no-repeat center center;
+  mask-size: auto 20px;
+  padding: 0 12px;
+  transition: all 0.2s;
+  width: 100%;
+
+  &:hover:not(.IconIsSelected) {
+    background: #7e79cb;
+  }
+
+  &Is {
+    &Selected {
+      background: #7e7acc;
+    }
+  }
+
+  &Variant {
+    &Color {
+      mask-image: url('./assets/color.svg');
+    }
+
+    &Gradient {
+      mask-image: url('./assets/gradient.svg');
+    }
+
+    &Image {
+      mask-image: url('./assets/image.svg');
+    }
+  }
+}
