--- a/src/views/Background/containers/common.scss
+++ b/src/views/Background/containers/common.scss
@@ -2,8 +2,17 @@
   width: 240px;
 }
 
+.List {
+  margin: 32px 0 0;
+  position: relative;
+}
+
 .Search {
   display: flex;
   justify-content: center;
   width: 100%;
+}
+
+.Spinner {
+  height: 400px;
 }
