--- a/src/views/Background/components/Image/components/Card.scss
+++ b/src/views/Background/components/Image/components/Card.scss
@@ -10,6 +10,11 @@
   &IsSelected {
     opacity: 1;
 
+    .Author {
+      opacity: .6;
+      visibility: visible;
+    }
+
     .Card {
       box-shadow: 0 24px 48px -24px rgba(0, 0, 0, .4);
       cursor: pointer;
@@ -68,6 +73,32 @@
   }
 }
 
+.Author {
+  align-items: center;
+  background: rgba(0, 0, 0, .6);
+  bottom: 0;
+  display: flex;
+  height: 32px;
+  justify-content: center;
+  left: 0;
+  opacity: 0;
+  position: absolute;
+  transition: all .2s;
+  width: 100%;
+  visibility: hidden;
+
+  &:hover {
+    opacity: 1 !important;
+  }
+
+  &Link {
+    color: #fff;
+    font-size: 14px;
+    font-weight: 400;
+    text-decoration: none;
+  }
+}
+
 .Card {
   background: #e8e8e8;;
   border-radius: 6px;
@@ -85,12 +116,12 @@
 .Check {
   background: #fff;
   border-radius: 100%;
-  bottom: 28px;
+  bottom: calc(50% - 16px);
   box-shadow: 0 12px 20px 0 rgba(0, 0, 0, .2);
   height: 32px;
   left: calc(50% - 16px);
   position: absolute;
-  transform: translateY(68px);
+  transform: translateY(92px);
   transition: all 0.4s;
   width: 32px;
 
