--- a/src/views/Main/components/Steps.scss
+++ b/src/views/Main/components/Steps.scss
@@ -28,20 +28,25 @@
 }
 
 .Index {
+  border: 2px solid rgba(#9E9AE2, 0.4);
   border-radius: 100%;
   height: 32px;
   overflow: hidden;
   position: relative;
+  transition: all .2s;
   width: 32px;
 
   &:before {
-    background-image: linear-gradient(250deg, #5e7adb, #8359c1);
+    background: var(--color-primary);
+    border: 2px solid var(--color-white);
+    border-radius: 100%;
     content: '';
     display: block;
-    height: 100%;
+    height: 28px;
     opacity: .2;
     position: absolute;
-    width: 100%;
+    transition: all .2s;
+    width: 28px;
     z-index: 1;
   }
 
@@ -51,13 +56,15 @@
     border-radius: 100%;
     color: #a6a2e9;
     display: flex;
+    font-size: 14px;
     font-weight: 700;
-    height: 100%;
+    height: 24px;
     justify-content: center;
-    position: relative;
-    transform: scale(.8);
+    left: 2px;
+    position: absolute;
+    top: 2px;
     transition: all .4s;
-    width: 100%;
+    width: 24px;
     z-index: 2;
 
     &:before {
@@ -95,27 +102,37 @@
 
   &Is {
     &Finished {
-      .IndexContent {
-        background-image: linear-gradient(250deg, #5e7adb, #8359c1);
-        color: transparent;
-        opacity: .8;
-        transform: scale(1);
+      .Index {
+        border: 2px solid var(--color-primary);
 
         &:before {
-          opacity: 1;
-          visibility: visible;
+          border-color: var(--color-primary);
+          opacity: .8;
+        }
+
+        &Content {
+          background: var(--color-primary);
+          color: transparent;
+          opacity: .8;
+          transform: scale(1);
+
+          &:before {
+            opacity: 1;
+            visibility: visible;
+          }
         }
       }
     }
 
     &Selected {
       .IndexContent {
-        background: #a6a2e9;
+        background: var(--color-primary);
+        color: transparent;
         transform: scale(0.35);
       }
 
       .Title {
-        color: #a6a2e9;
+        color: var(--color-primary);
       }
     }
   }
