--- a/src/views/Main/components/User.scss
+++ b/src/views/Main/components/User.scss
@@ -47,7 +47,7 @@
     position: relative;
 
     &Bar {
-      background: linear-gradient(269deg, #5e7adb, #8359c1);
+      background: var(--color-primary);
       height: 2px;
       left: 0;
       position: absolute;
@@ -72,18 +72,19 @@
   text-decoration: none;
 
   &:active {
-    color: #8e8ad8;
+    color: var(--color-primary);
+    opacity: .8;
 
     .LinkIcon {
-      background: #8e8ad8;
+      background: var(--color-primary);
     }
   }
 
   &:hover:not(:active) {
-    color: #9e9ae2;
+    color: var(--color-primary);
 
     .LinkIcon {
-      background: #9e9ae2;
+      background: var(--color-primary);
     }
   }
 
@@ -93,7 +94,7 @@
 
   &Is {
     &Active {
-      color: #8e8ad8;
+      color: var(--color-primary);;
       pointer-events: none;
     }
   }
@@ -131,7 +132,7 @@
 
   &Button {
     align-items: center;
-    background: #9e9ae2;
+    background: var(--color-primary);
     border: 0;
     color: #ffffff;
     display: flex;
@@ -142,27 +143,23 @@
     justify-content: center;
     letter-spacing: .4px;
     margin: 0;
+    opacity: .8;
     padding: 0;
     transition: all .2s;
     width: 100%;
 
     &:active {
-      background: #7e7acc;
-    }
-
-    &:focus {
-      outline: none;
+      opacity: .6;
     }
 
     &:hover:not(:active) {
-      background: #8e8ad8;
-      cursor: pointer;
+      opacity: 1;
     }
   }
 }
 
 .Status {
-  color: #7e7acc;
+  color: var(--color-primary);
   font-size: 12px;
   letter-spacing: .4px;
   text-transform: uppercase;
@@ -178,7 +175,6 @@
     display: flex;
     font-family: inherit;
     font-size: 14px;
-    font-weight: 500;
     letter-spacing: .1px;
     padding: 12px 4px;
 
