--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -3,12 +3,25 @@
   flex-direction: column;
   height: 100%;
   width: 100%;
+
+  &With {
+    &Tabs {
+      .Container {
+        max-height: calc(100% - 100px);
+      }
+
+      .Header {
+        flex: 0 0 100px;
+        height: 100px;
+      }
+    }
+  }
 }
 
 .Container {
   flex: 1 1 auto;
   margin: 0 -24px;
-  max-height: calc(100% - 100px);
+  max-height: calc(100% - 28px);
   overflow-x: visible;
   overflow-y: scroll;
   padding: 40px 24px;
@@ -34,8 +47,8 @@
 
 .Header {
   background: #f9f9f9;
-  flex: 0 0 100px;
-  height: 100px;
+  flex: 0 0 28x;
+  height: 28px;
   position: relative;
   z-index: 2;
 }
