Refactor desgin system.

--- a/src/components/Form/components/Color/Color.scss
+++ b/src/components/Form/components/Color/Color.scss
@@ -102,7 +102,7 @@
 
 .Saturation {
   border-radius: 4px;
-  box-shadow: 0 16px 24px -8px rgba(0, 0, 0, .4);
+  box-shadow: 0 12px 32px rgba(0, 0, 0, .2);
   height: 136px;
   overflow: hidden;
   position: relative;
