--- a/src/components/Form/components/Gradient/components/Angle.scss
+++ b/src/components/Form/components/Gradient/components/Angle.scss
@@ -1,5 +1,5 @@
 .Angle {
-  background: #a6a2e9;
+  background: var(--color-primary);;
   bottom: -12px;
   height: 24px;
   left: 9px;
@@ -9,7 +9,7 @@
   &Value {
     background: #f9f9f9;
     background: linear-gradient(90deg, rgba(0 , 0, 0, 0) 0%, rgba(249,249,249,1) 25%, rgba(249,249,249,1) 75%, rgba(0 , 0, 0, 0) 100%);
-    color: #a6a2e9;
+    color: var(--color-primary);
     font-size: 14px;
     font-weight: 700;
     height: 20px;
@@ -61,29 +61,12 @@
   position: static;
   width: 100%;
 
-  // &:after {
-  //   background: #5e7adb;
-  //   background: linear-gradient(to left, rgba(131, 89, 193, 0), #5e7adb 51%, rgba(131, 89, 193, 0));
-  //   content: '';
-  //   display: block;
-  //   height: 6px;
-  //   left: inherit;
-  //   opacity: .6;
-  //   position: absolute;
-  //   top: 10px;
-  //   width: 104px;
-  // }
-
-  &:focus {
-    outline: none;
-  }
-
   &::-webkit-slider-thumb {
     appearance: none;
     background: #a6a2e9;
     border: 4px solid #fff;
     border-radius: 100%;
-    box-shadow: 0 0 2px rgba(0, 0, 0, .1);
+    box-shadow: 0 2px 4px rgba(158, 154, 226, .4);
     height: 16px;
     position: relative;
     width: 16px;
