--- a/src/views/Store/components/ColorSwitcher.scss
+++ b/src/views/Store/components/ColorSwitcher.scss
@@ -12,7 +12,7 @@
   background: #ffffff;
   border: 0;
   border-radius: 100%;
-  box-shadow: 0 5px 16px 0 rgba(0, 0, 0, .06);
+  box-shadow: 0 6px 8px rgba(0, 0, 0, .1);
   height: 32px;
   position: absolute;
   top: calc(50% - 16px);
