--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -10,61 +10,95 @@
   }
 
   &Variant {
-    &Gradient {
-      background: transparent;
-      background-image: linear-gradient(250deg, rgba(94,122,219, .9), rgba(131,89,193, .9));
+    &GradientReverse {
+      background: rgba(#9E9AE2, .4);
       border: 0;
-      border-radius: 30px;
-      height: 38px;
+      border-radius: 32px;
+      box-shadow: 0 8px 12px rgba(#9E9AE2, .6);
+      min-height: 40px;
       min-width: 78px;
       position: relative;
 
-      &:active {
-        opacity: .8;
-      }
-
       &:after {
-        background-image: linear-gradient(250deg, #5e7adb, #8359c1);
-        border-radius: 40px;
-        bottom: -12px;
-        content: '';
-        filter: blur(6px);
-        height: 28px;
-        left: 6px;
-        opacity: 0;
-        position: absolute;
-        transform: translateY(-12px);
-        transition: all .2s;
-        width: calc(100% - 12px);
-        z-index: -2;
-      }
-
-      &:before {
-        background-image: linear-gradient(250deg, #5e7adb, #8359c1);
+        background: transparent;
+        border: 6px solid rgba(#9E9AE2, .5);
         border-radius: 40px;
         content: '';
+        display: block;
         height: calc(100% + 12px);
         left: -6px;
-        opacity: .2;
         position: absolute;
         top: -6px;
+        transition: all .2s;
         width: calc(100% + 12px);
         z-index: -1;
       }
 
-      &:hover:not(:active) {
-        opacity: .9;
+      &:active {
+        background: transparent;
+        box-shadow: none;
 
         &:after {
-          opacity: .4;
-          transform: translateY(0);
+          background: rgba(#9E9AE2, .6);
+          border-color: transparent;
+        }
+      }
+
+      &:hover:not(:active) {
+        background: transparent;
+        box-shadow: none;
+
+        &:after {
+          background: rgba(#9E9AE2, 1);
+          border-color: transparent;
         }
       }
 
       .Content {
         color: rgba(255, 255, 255, .8);
         font-size: 14px;
-        font-weight: 700;
+        font-weight: 600;
+        letter-spacing: .4px;
+      }
+    }
+
+    &Gradient {
+      background: rgba(#9E9AE2, .8);
+      border: 0;
+      border-radius: 32px;
+      box-shadow: 0 8px 12px rgba(#9E9AE2, .6);
+      min-height: 40px;
+      min-width: 78px;
+      position: relative;
+
+      &:after {
+        border: 6px solid rgba(#9E9AE2, .2);
+        border-radius: 40px;
+        content: '';
+        display: block;
+        height: calc(100% + 12px);
+        left: -6px;
+        position: absolute;
+        top: -6px;
+        transition: all .2s;
+        width: calc(100% + 12px);
+        z-index: -1;
+      }
+
+      &:active {
+        background: rgba(#9E9AE2, .6);
+        box-shadow: 0 8px 12px rgba(#9E9AE2, .4);
+      }
+
+      &:hover:not(:active) {
+        background: rgba(#9E9AE2, 1);
+        box-shadow: 0 8px 12px rgba(#9E9AE2, .8);
+      }
+
+      .Content {
+        color: rgba(255, 255, 255, .8);
+        font-size: 14px;
+        font-weight: 600;
         letter-spacing: .4px;
       }
     }
