--- a/src/views/Search/Search.scss
+++ b/src/views/Search/Search.scss
@@ -69,6 +69,22 @@
   overflow-y: scroll;
   padding: 10px;
 
+  &:hover {
+    &::-webkit-scrollbar-thumb {
+      background: #bfbfc7;
+    }
+  }
+
+  &::-webkit-scrollbar {
+    background: transparent;
+    width: 4px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: transparent;
+    border-radius: 4px 0 0 4px;
+  }
+
   & > * {
     flex: 0 0 calc(50% - 20px);
     margin: 10px;
@@ -133,7 +149,7 @@
 
 .Spinner {
   animation: spin 1s infinite linear;
-  border: 4px solid #7e5dc6;
+  border: 4px solid var(--color-primary);
   border-top-color: transparent;
   border-radius: 100%;
   height: 24px;
