--- a/src/views/Websites/containers/Limit/Limit.scss
+++ b/src/views/Websites/containers/Limit/Limit.scss
@@ -1,5 +1,5 @@
 .Count {
-  color: #7e7acc;
+  color: var(--color-primary);
 }
 
 .Limit {
@@ -15,7 +15,7 @@
   width: 240px;
 
   &Bar {
-    background-image: linear-gradient(269deg, #5e7adb, #8359c1);
+    background: var(--color-primary);
     border-radius: 6px;
     height: 100%;
     transition: all .4s;
