--- a/src/components/Form/components/Select/Select.scss
+++ b/src/components/Form/components/Select/Select.scss
@@ -155,6 +155,22 @@
   overflow-x: hidden;
   overflow-y: scroll;
   padding: 0;
+
+  &:hover {
+    &::-webkit-scrollbar-thumb {
+      background: #bfbfc7;
+    }
+  }
+
+  &::-webkit-scrollbar {
+    background: transparent;
+    width: 4px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: transparent;
+    border-radius: 4px 0 0 4px;
+  }
 }
 
 .Placeholder {
@@ -167,7 +183,7 @@
 
 .Trigger {
   align-items: center;
-  background: #b8b4f9;
+  background: var(--color-primary);
   border-radius: 4px;
   display: flex;
   flex: 0 0 28px;
