--- a/src/components/Form/components/Link.scss
+++ b/src/components/Form/components/Link.scss
@@ -115,7 +115,9 @@
 }
 
 .Info {
+  display: flex;
   flex: 1 1 auto;
+  flex-direction: column;
   margin: 0 0 0 16px;
   max-width: calc(100% - 92px);
 }
@@ -181,6 +183,7 @@
   font-size: 12px;
   letter-spacing: .1px;
   line-height: 16px;
+  max-width: 100%;
   overflow: hidden;
   text-decoration: none;
   text-overflow: ellipsis;
