--- a/src/template/templates/Template3/Template3.scss
+++ b/src/template/templates/Template3/Template3.scss
@@ -1,4 +1,5 @@
 @import './style/desktop.scss';
+@import './style/mobile.scss';
 @import './style/tablet.scss';
 
 .Root {
@@ -87,8 +88,13 @@
   }
 }
 
-.Wrapper {
+.Track {
   display: flex;
   justify-content: space-between;
+  width: 100%;
+}
+
+.Wrapper {
+  display: flex;
   width: 100%;
 }
