--- a/src/template/templates/Template3/style/tablet.scss
+++ b/src/template/templates/Template3/style/tablet.scss
@@ -99,9 +99,12 @@
         }
       }
 
-      .Wrapper {
+      .Track {
         display: flex;
         flex-direction: column;
+      }
+
+      .Wrapper {
         max-height: 100%;
         padding: 100px 80px 0;
         width: 100%;
