--- a/src/template/templates/Template3/style/mobile.scss
+++ b/src/template/templates/Template3/style/mobile.scss
@@ -156,7 +156,9 @@
       }
 
       .Smartphone {
+        bottom: -60px;
         height: 473px;
+        position: absolute;
         width: 260px;
       }
 
