--- a/src/template/components/Social/components/Item.scss
+++ b/src/template/components/Social/components/Item.scss
@@ -1,5 +1,7 @@
 .Root {
   height: 16px;
+  transition: all .2s;
+  text-decoration: none;
   width: 16px;
 
   &Is {
@@ -12,7 +14,6 @@
       &:hover:not(:active) {
         cursor: pointer;
         transform: scale(1.25);
-        transition: all .2s;
 
         .Icon {
           filter: drop-shadow(0 10px 16px rgba(0, 0, 0, .15));
