--- a/src/template/templates/Template3/Template3.scss
+++ b/src/template/templates/Template3/Template3.scss
@@ -6,10 +6,13 @@
   background: #fff;
   display: flex;
   flex-direction: column;
+  min-height: 100%;
+  min-width: 100%;
   width: 100%;
 }
 
 .Background {
+  flex: 1 1 auto;
   height: 100%;
   position: relative;
   width: 100%;
@@ -28,6 +31,7 @@
 
 .Body {
   display: flex;
+  flex-direction: column;
 }
 
 .Container {
