--- a/src/App.scss
+++ b/src/App.scss
@@ -6,7 +6,7 @@
 }
 
 :global body {
-  background: #f9f9f9;;
+  background: #f9f9f9;
   color: #545e6f;
   font-family: 'Avenir', sans-serif;
   font-size: 16px;
