Integrate Font Awesome.

--- a/src/components/Form/components/Link.scss
+++ b/src/components/Form/components/Link.scss
@@ -105,7 +105,7 @@
   background: #f0f1f1 no-repeat center center;
   border-radius: 4px;
   color: #ccced3;
-  display: flex;
+  display: flex !important;
   flex: 0 0 40px;
   font-size: 20px;
   height: 40px;
