--- a/src/template/containers/Sandbox.scss
+++ b/src/template/containers/Sandbox.scss
@@ -1,4 +1,10 @@
 .Root {
+  display: flex;
+  flex-direction: column;
   min-height: 100vh;
   min-width: 100vw;
+
+  & > * {
+    flex: 1 1 auto;
+  }
 }
