--- a/src/containers/Plans/Plans.scss
+++ b/src/containers/Plans/Plans.scss
@@ -34,12 +34,24 @@
     }
   }
 
-  &Has {
+  &With {
     &Price {
       .Header {
         height: 0;
         opacity: 0;
-        transition: all 4s;
+        transform: translateY(-140px);
+        transition: all .4s;
+      }
+
+      .List {
+        height: 425px;
+        margin: 64px 0 0;
+        transition: all .4s;
+      }
+
+      .Price {
+        height: 256px;
+        transition: all .4s;
       }
     }
   }
@@ -68,8 +80,13 @@
 }
 
 .List {
-  margin: 40px 0 0;
+  height: 44px;
+  margin: 0;
   width: 1200px;
+}
+
+.Price {
+  height: 564px;
 }
 
 .Title {
