--- a/src/containers/Plans/Plans.scss
+++ b/src/containers/Plans/Plans.scss
@@ -49,6 +49,14 @@
         transition: all .4s;
       }
 
+      .Period {
+        height: 60px;
+        margin: 60px 0 0;
+        opacity: 1;
+        visibility: visible;
+        transition: all .4s;
+      }
+
       .Price {
         height: 256px;
         transition: all .4s;
@@ -83,6 +91,13 @@
   height: 44px;
   margin: 0;
   width: 1200px;
+}
+
+.Period {
+  height: 0;
+  margin: 0;
+  opacity: 0;
+  visibility: hidden;
 }
 
 .Price {
