Integrate PRO to UI.

--- a/src/components/Form/components/Link.scss
+++ b/src/components/Form/components/Link.scss
@@ -5,7 +5,7 @@
     outline: none;
   }
 
-  &:hover:not(.RootIsOpened) {
+  &:hover:not(.RootIsOpened):not(.RootIsPro) {
     cursor: pointer;
 
     .Plus {
@@ -59,6 +59,12 @@
     &Pro {
       .Info {
         max-width: calc(100% - 100px);
+      }
+
+      .Trigger {
+        &:hover {
+          cursor: auto !important;
+        }
       }
     }
   }
@@ -130,17 +136,6 @@
   text-transform: uppercase;
 }
 
-.Pro {
-  background: #b8b4f9;
-  border-radius: 20px;
-  color: #ffffff;
-  font-size: 12px;
-  letter-spacing: .5px;
-  margin: 0 0 0 8px;
-  opacity: .6;
-  padding: 3px 8px;
-  transition: all .2s;
-}
 
 .Plus {
   align-items: center;
@@ -167,6 +162,10 @@
     transition: all .2s;
     width: 8px;
   }
+}
+
+.Pro {
+  margin: 0 0 0 8px;
 }
 
 .Trigger {
