--- a/src/components/Form/components/Textarea.scss
+++ b/src/components/Form/components/Textarea.scss
@@ -1,3 +1,13 @@
+.Root {
+  &Is {
+    &ReadOnly {
+      .Textarea {
+        pointer-events: none;
+      }
+    }
+  }
+}
+
 .Textarea {
   background: #f0f1f1;
   border: 0;
