--- a/src/views/Smartphone/components/Mockup/components/Item.scss
+++ b/src/views/Smartphone/components/Mockup/components/Item.scss
@@ -38,7 +38,7 @@
     visibility: hidden;
   }
 
-  &:hover {
+  &:hover:not(.RootIsPro) {
     cursor: pointer;
   }
 
@@ -68,6 +68,20 @@
         opacity: 0;
       }
     }
+
+    &Pro {
+      opacity: 1;
+
+      &:hover {
+        cursor: default !important;
+      }
+
+      &:not(.RootIsCurrent) {
+        .Preview {
+          opacity: .6;
+        }
+      }
+    }
   }
 
   &Variant {
@@ -80,7 +94,7 @@
     }
   }
 
-  &:hover,
+  &:hover:not(.RootIsPro),
   &IsCurrent {
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
     opacity: 1;
@@ -124,6 +138,12 @@
   max-width: 100%;
   opacity: 1;
   transition: all .2s;
+}
+
+.Pro {
+  position: absolute;
+  right: 8px;
+  top: 8px;
 }
 
 @keyframes spin {
