--- a/src/components/Form/components/Field.scss
+++ b/src/components/Form/components/Field.scss
@@ -2,6 +2,14 @@
   &:not(:first-child) {
     margin: 36px 0 0;
   }
+
+  &Is {
+    &Pro {
+      .Label {
+        pointer-events: none;
+      }
+    }
+  }
 }
 
 .Error {
@@ -57,6 +65,10 @@
   font-weight: 600;
   letter-spacing: .6px;
   text-transform: uppercase;
+
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 .Max {
