--- a/src/template/components/Store/components/Button.scss
+++ b/src/template/components/Store/components/Button.scss
@@ -1,11 +1,10 @@
+@import "./variants/v1";
+
 .Root {
   align-items: center;
-  background: #ffffff;
   border: 0;
-  border-radius: 6px;
   display: flex;
   height: 44px;
-  padding: 0 12px 0 16px;
   text-decoration: none;
   transition: all .2s;
   width: 100%;
@@ -20,57 +19,6 @@
       &:hover:not(:active) {
         box-shadow: 0 12px 20px 0 rgba(0, 0, 0, .16);
         opacity: .9;
-      }
-    }
-  }
-
-  &View {
-    &Desktop {
-      height: 60px;
-      padding: 0 16px;
-      width: 178px;
-
-      .Icon {
-        flex: 0 0 24px;
-        font-size: 24px;
-        height: 24px;
-        width: 24px;
-      }
-
-      .Info {
-        margin: 0 0 0 14px;
-      }
-
-      .Title {
-        font-size: 14px;
-        font-weight: 600;
-        letter-spacing: .4px;
-        margin: 2px 0 0;
-        text-transform: uppercase;
-      }
-    }
-
-    &Mobile {
-      min-width: 128px;
-    }
-
-    &Tablet {
-      height: 56px;
-      padding: 0 20px 0 24px;
-      width: 164px;
-
-      .Icon {
-        font-size: 24px;
-      }
-
-      .Info {
-        margin: 0 0 0 16px;
-      }
-
-      .Title {
-        font-size: 14px;
-        font-weight: 600;
-        letter-spacing: .4px;
       }
     }
   }
